{
    "name": "MyInput",
    "maps": [
        {
            "name": "TopDown",
            "id": "6358e61c-6d33-4285-99bf-91945b09d886",
            "actions": [
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "8569992f-15b1-47bf-bca8-57f0e0bd4fcb",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.18)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "999e313b-28f4-4e2b-88db-426a6cfa65b5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "816b3d41-3eb9-46aa-8b99-ebd813f40618",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.18)",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b013c465-9a73-42c6-9fc9-f6cc6a462e8e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}